Update lightline with better colors

--- a/estilo/estilo/lightline/spaceduck.yml
+++ b/estilo/estilo/lightline/spaceduck.yml
@@ -1,30 +1,30 @@
-normal1: 'pureBlack darkPurp'
+RRRRal1: 'pureBlack darkPurp'
 normal2: 'comment darkPurp2'
-normal3: 'comment visualSel'
-normal4: 'comment visualSel'
-normal5: 'comment visualSel'
+normal3: 'darkPurp2 visualSel'
+normal4: 'pureBlack darkPurp'
+normal5: 'darkPurp2 visualSel'
 normalError: 'pureBlack red'
 normalWarning: 'pureBlack orange'
-inactive1: 'visualSel cursorLine'
-inactive2: 'visualSel cursorLine'
-inactive3: 'visualSel cursorLine'
-inactive4: 'visualSel cursorLine'
-inactive5: 'visualSel cursorLine'
+inactive1: 'darkPurp2 visualSel'
+inactive2: 'darkPurp2 visualSel'
+inactive3: 'darkPurp2 visualSel'
+inactive4: 'darkPurp2 visualSel'
+inactive5: 'darkPurp2 visualSel'
 insert1: 'pureBlack green'
 insert2: 'comment darkPurp2'
-insert3: 'comment visualSel'
-insert4: 'comment visualSel'
-insert5: 'comment visualSel'
+insert3: 'darkPurp2 visualSel'
+insert4: 'pureBlack green'
+insert5: 'darkPurp2 visualSel'
 replace1: 'pureBlack purple2'
 replace2: 'comment darkPurp2'
-replace3: 'comment visualSel'
-replace4: 'comment visualSel'
-replace5: 'comment visualSel'
+replace3: 'darkPurp2 visualSel'
+replace4: 'pureBlack purple2'
+replace5: 'darkPurp2 visualSel'
 visual1: 'pureBlack yellow'
 visual2: 'comment darkPurp2'
-visual3: 'comment visualSel'
-visual4: 'comment visualSel'
-visual5: 'comment visualSel'
+visual3: 'darkPurp2 visualSel'
+visual4: 'pureBlack yellow'
+visual5: 'darkPurp2 visualSel'
 tablineLeft: 'foreground background'
 tablineSelected: 'foreground background'
 tablineMiddle: 'foreground background'
