--- a/estilo/estilo.yml
+++ b/estilo/estilo.yml
@@ -5,14 +5,14 @@ author: 'Guillermo Rodriguez'
 url: 'https://github.com/pineapplegiant/spaceduck'
 description: 'An intergalactic space theme for Vim, Terminal & more!'
 colorschemes:
-  - name: spaceduck
+  - name: 'spaceduck'
     background: 'dark'
-    palette: spaceduck
+    palette: 'spaceduck'
 airline: 
-  - name: spaceduck 
-    palette: spaceduck 
-    style: spaceduck 
+  - name: 'spaceduck' 
+    palette: 'spaceduck' 
+    style: 'spaceduck' 
 lightline: 
-  - name: spaceduck 
-    palette: spaceduck 
-    style: spaceduck 
+  - name: 'spaceduck' 
+    palette: 'spaceduck' 
+    style: 'spaceduck' 
