Hopefully fixes lightline bugs

--- a/estilo/lightline/spaceduck.yml
+++ b/estilo/lightline/spaceduck.yml
@@ -1,4 +1,4 @@
-RRRRal1: 'pureBlack darkPurp'
+normal1: 'pureBlack darkPurp'
 normal2: 'comment darkPurp2'
 normal3: 'darkPurp2 visualSel'
 normal4: 'pureBlack darkPurp'
@@ -25,7 +25,7 @@ visual2: 'comment darkPurp2'
 visual3: 'darkPurp2 visualSel'
 visual4: 'pureBlack yellow'
 visual5: 'darkPurp2 visualSel'
-tablineLeft: 'foreground background'
-tablineSelected: 'foreground background'
-tablineMiddle: 'foreground background'
-tablineRight: 'foreground background'
+tablineLeft: 'pureBlack darkPurp'
+tablineSelected: 'pureBlack purple'
+tablineMiddle: 'darkPurp2 visualSel'
+tablineRight: 'pureBlack darkPurp'
