Fix ugly visual selection and lightline bufferline

--- a/estilo/lightline/spaceduck.yml
+++ b/estilo/lightline/spaceduck.yml
@@ -26,6 +26,6 @@ visual3: 'darkPurp2 visualSel'
 visual4: 'pureBlack yellow'
 visual5: 'darkPurp2 visualSel'
 tablineLeft: 'pureBlack darkPurp'
-tablineSelected: 'pureBlack purple'
+tablineSelected: 'comment darkPurp2'
 tablineMiddle: 'darkPurp2 visualSel'
 tablineRight: 'pureBlack darkPurp'
