Delete Comment color. Super useless idk why I had it in there 😒

--- a/estilo/syntax/base.yml
+++ b/estilo/syntax/base.yml
@@ -52,7 +52,7 @@ diffAdded: 'purple -'
 diffRemoved: 'red -'
 
 # BASE SYNTAX
-Comment: 'comment'
+Comment: 'darkPurp'
 Constant: 'yellow'
 String: 'cyan'                      # Constant
 Character: '@Constant'              # Constant
