Deprecate lightline and airline comment color. Visual is now visual selection color

--- a/estilo/syntax/base.yml
+++ b/estilo/syntax/base.yml
@@ -44,7 +44,7 @@ TabLine: 'pureBlack grey'
 TabLineFill: 'grey pureBlack'
 TabLineSel: 'grey2 background'
 Title: 'orange'
-Visual: '- darkPurp2'
+Visual: '- visualSel'
 VisualNOS: '' #TODO
 WarningMsg: 'orange background'
 WildMenu: 'pureBlack grey2'
