--- a/estilo/lightline/spaceduck.yml
+++ b/estilo/lightline/spaceduck.yml
@@ -1,5 +1,5 @@
 normal1: 'pureBlack darkPurp'
-normal2: 'comment darkPurp2'
+normal2: 'darkPurp darkPurp2'
 normal3: 'darkPurp2 visualSel'
 normal4: 'pureBlack darkPurp'
 normal5: 'darkPurp2 visualSel'
@@ -11,21 +11,21 @@ inactive3: 'darkPurp2 visualSel'
 inactive4: 'darkPurp2 visualSel'
 inactive5: 'darkPurp2 visualSel'
 insert1: 'pureBlack green'
-insert2: 'comment darkPurp2'
+insert2: 'darkPurp darkPurp2'
 insert3: 'darkPurp2 visualSel'
 insert4: 'pureBlack green'
 insert5: 'darkPurp2 visualSel'
 replace1: 'pureBlack purple2'
-replace2: 'comment darkPurp2'
+replace2: 'darkPurp darkPurp2'
 replace3: 'darkPurp2 visualSel'
 replace4: 'pureBlack purple2'
 replace5: 'darkPurp2 visualSel'
 visual1: 'pureBlack yellow'
-visual2: 'comment darkPurp2'
+visual2: 'darkPurp darkPurp2'
 visual3: 'darkPurp2 visualSel'
 visual4: 'pureBlack yellow'
 visual5: 'darkPurp2 visualSel'
 tablineLeft: 'pureBlack darkPurp'
-tablineSelected: 'comment darkPurp2'
+tablineSelected: 'darkPurp darkPurp2'
 tablineMiddle: 'darkPurp2 visualSel'
 tablineRight: 'pureBlack darkPurp'
