--- a/estilo/syntax/base.yml
+++ b/estilo/syntax/base.yml
@@ -7,10 +7,10 @@ CursorColumn: '- cursorLine'
 CursorLine: '- cursorLine'
 CursorLineNr: 'grey2 cursorLine'
 Directory: 'cyan'
-DiffAdd: 'green2 darkPurp2'
-DiffChange: 'cyan darkPurp2'
-DiffDelete: 'red darkPurp2'
-DiffText: 'foreground darkPurp2'
+DiffAdd: 'green visualSel'
+DiffChange: 'orange visualSel'
+DiffDelete: 'red visualSel'
+DiffText: 'yellow visualSel'
 EndOfBuffer: 'darkPurp background'
 ErrorMsg: 'red background'
 VertSplit: 'pureBlack pureBlack'
