--- a/estilo/syntax/plugins.yml
+++ b/estilo/syntax/plugins.yml
@@ -71,3 +71,9 @@ StartifySpecial: '@Normal'
 
 # Hyper Help Text
 helpHyperTextJump: '@Constant'
+
+# Vista
+VistaTag: 'green'
+VistaIcon: 'cyan'
+VistaScope: 'yellow'
+VistaKind: 'green2'
