Change jsxComponent tag to purple to differentiate

--- a/estilo/syntax/base.yml
+++ b/estilo/syntax/base.yml
@@ -182,6 +182,7 @@ rubyKeywordAsMethod: '@Tag'
 typescriptProp: '@Tag'
 typescriptVariable: '@Title'
 jsxTagName: '@HTMLTagName'
+jsxComponentName: '@Tag'
 jsxOpenPunct: '@jsxTagName'
 jsxClosePunct: '@jsxOpenPunct'
 jsxCloseString: '@jsxClosePunct'
