Change lightline from pure black to background

--- a/estilo/lightline/spaceduck.yml
+++ b/estilo/lightline/spaceduck.yml
@@ -1,31 +1,31 @@
-normal1: 'pureBlack darkPurp'
+normal1: 'background darkPurp'
 normal2: 'darkPurp darkPurp2'
 normal3: 'darkPurp2 visualSel'
-normal4: 'pureBlack darkPurp'
+normal4: 'background darkPurp'
 normal5: 'darkPurp2 visualSel'
-normalError: 'pureBlack red'
-normalWarning: 'pureBlack orange'
+normalError: 'background red'
+normalWarning: 'background orange'
 inactive1: 'darkPurp2 visualSel'
 inactive2: 'darkPurp2 visualSel'
 inactive3: 'darkPurp2 visualSel'
 inactive4: 'darkPurp2 visualSel'
 inactive5: 'darkPurp2 visualSel'
-insert1: 'pureBlack green'
+insert1: 'background green'
 insert2: 'darkPurp darkPurp2'
 insert3: 'darkPurp2 visualSel'
-insert4: 'pureBlack green'
+insert4: 'background green'
 insert5: 'darkPurp2 visualSel'
-replace1: 'pureBlack purple2'
+replace1: 'background purple2'
 replace2: 'darkPurp darkPurp2'
 replace3: 'darkPurp2 visualSel'
-replace4: 'pureBlack purple2'
+replace4: 'background purple2'
 replace5: 'darkPurp2 visualSel'
-visual1: 'pureBlack yellow'
+visual1: 'background yellow'
 visual2: 'darkPurp darkPurp2'
 visual3: 'darkPurp2 visualSel'
-visual4: 'pureBlack yellow'
+visual4: 'background yellow'
 visual5: 'darkPurp2 visualSel'
-tablineLeft: 'pureBlack darkPurp'
+tablineLeft: 'background darkPurp'
 tablineSelected: 'darkPurp darkPurp2'
 tablineMiddle: 'darkPurp2 visualSel'
-tablineRight: 'pureBlack darkPurp'
+tablineRight: 'background darkPurp'
