--- a/estilo/lightline/spaceduck.yml
+++ b/estilo/lightline/spaceduck.yml
@@ -26,6 +26,6 @@ visual3: 'darkPurp2 visualSel'
 visual4: 'background yellow'
 visual5: 'darkPurp2 visualSel'
 tablineLeft: 'background darkPurp'
-tablineSelected: 'darkPurp darkPurp2'
+tablineSelected: 'background darkPurp2'
 tablineMiddle: 'darkPurp2 visualSel'
 tablineRight: 'background darkPurp'
